--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "typescript": "^2.3.1",
     "url-loader": "^0.5.6",
     "webpack": "2.2.1",
-    "webpack-dev-server": "2.3.0"
+    "webpack-dev-server": "2.3.0",
+    "webpack-parallel-uglify-plugin": "^1.1.0"
   }
 }
