--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.3.2",
     "awesome-typescript-loader": "^3.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "codelyzer": "2.0.0",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.28.4",
